<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/marginMedium"
    android:layout_marginVertical="@dimen/marginSmall"
    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
    app:cardCornerRadius="@dimen/marginLarge">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryVariant"
        android:padding="@dimen/marginMedium">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleActiveStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:layout_marginTop="@dimen/marginMedium"
            android:layout_marginEnd="@dimen/marginLarge"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/active_status"
            android:textColor="@color/colorOnPrimaryHighEmp"
            app:fontFamily="@font/space_mono_bold"
            app:layout_constraintBottom_toTopOf="@id/tvActiveStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvActiveStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLarge"
            android:layout_marginEnd="@dimen/marginSmall"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/colorOnPrimaryMediumEmp"
            app:fontFamily="@font/space_mono_regular"
            app:layout_constraintBottom_toTopOf="@id/titleCostPerLaunch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleActiveStatus"
            tools:text="Active" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleCostPerLaunch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:layout_marginTop="@dimen/marginMedium"
            android:layout_marginEnd="@dimen/marginLarge"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/cost_per_launch"
            android:textColor="@color/colorOnPrimaryHighEmp"
            app:fontFamily="@font/space_mono_bold"
            app:layout_constraintBottom_toTopOf="@id/tvCostPerLaunch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvActiveStatus" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCostPerLaunch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLarge"
            android:layout_marginEnd="@dimen/marginSmall"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/colorOnPrimaryMediumEmp"
            app:fontFamily="@font/space_mono_regular"
            app:layout_constraintBottom_toTopOf="@id/titleSuccessRatePercent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleCostPerLaunch"
            tools:text="111111" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleSuccessRatePercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:layout_marginTop="@dimen/marginMedium"
            android:layout_marginEnd="@dimen/marginLarge"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/success_rate_percent"
            android:textColor="@color/colorOnPrimaryHighEmp"
            app:fontFamily="@font/space_mono_bold"
            app:layout_constraintBottom_toTopOf="@id/tvSuccessRatePercent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCostPerLaunch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSuccessRatePercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLarge"
            android:layout_marginEnd="@dimen/marginSmall"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/colorOnPrimaryMediumEmp"
            app:fontFamily="@font/space_mono_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleSuccessRatePercent"
            tools:text="89%" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:layout_marginTop="@dimen/marginMedium"
            android:layout_marginEnd="@dimen/marginLarge"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/height_feet"
            android:textColor="@color/colorOnPrimaryHighEmp"
            app:fontFamily="@font/space_mono_bold"
            app:layout_constraintBottom_toTopOf="@id/tvHeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSuccessRatePercent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLarge"
            android:layout_marginEnd="@dimen/marginSmall"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/colorOnPrimaryMediumEmp"
            app:fontFamily="@font/space_mono_regular"
            app:layout_constraintBottom_toTopOf="@id/titleDiameter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleHeight"
            tools:text="1269/3366 ft" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleDiameter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:layout_marginTop="@dimen/marginMedium"
            android:layout_marginEnd="@dimen/marginLarge"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/diameter_feet"
            android:textColor="@color/colorOnPrimaryHighEmp"
            app:fontFamily="@font/space_mono_bold"
            app:layout_constraintBottom_toTopOf="@id/tvDiameter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeight" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDiameter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLarge"
            android:layout_marginEnd="@dimen/marginSmall"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/colorOnPrimaryMediumEmp"
            app:fontFamily="@font/space_mono_regular"
            app:layout_constraintBottom_toTopOf="@id/titleDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleDiameter"
            tools:text="1269/3366 ft" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:layout_marginTop="@dimen/marginMedium"
            android:layout_marginEnd="@dimen/marginLarge"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/description"
            android:textColor="@color/colorOnPrimaryHighEmp"
            app:fontFamily="@font/space_mono_bold"
            app:layout_constraintBottom_toTopOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDiameter" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLarge"
            android:layout_marginEnd="@dimen/marginSmall"
            android:ellipsize="end"
            android:maxLines="9"
            android:textColor="@color/colorOnPrimaryMediumEmp"
            app:fontFamily="@font/space_mono_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/titleWikipediaLink"
            app:layout_constraintTop_toBottomOf="@id/titleDescription"
            tools:text="@string/sample_description" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleWikipediaLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:layout_marginTop="@dimen/marginMedium"
            android:layout_marginEnd="@dimen/marginLarge"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/wikipedia_link"
            android:textColor="@color/colorOnPrimaryHighEmp"
            app:fontFamily="@font/space_mono_bold"
            app:layout_constraintBottom_toTopOf="@id/tvWikipediaLink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWikipediaLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLarge"
            android:layout_marginEnd="@dimen/marginSmall"
            android:layout_marginBottom="@dimen/marginLarge"
            android:ellipsize="end"
            android:maxLines="3"
            android:autoLink="web"
            android:inputType="textUri"
            android:textColorLink="@color/colorOnPrimaryMediumEmp"
            android:textColor="@color/colorOnPrimaryHighEmp"
            app:fontFamily="@font/space_mono_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleWikipediaLink"
            tools:text="@string/sample_wikipedia_link" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>